--- a/navbar-primary.html
+++ b/navbar-primary.html
@@ -22,7 +22,7 @@
 <body>
   <!-- Navbar start -->
   <nav class="navbar navbar-expand-md bg-primary navbar-dark fixed-top">
-    <a class="navbar-brand" href="Web.html">BloodBank</a>
+    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
